Adios: Codebase formatting and passing the test coverage

--- a/mcps/Adios/pyproject.toml
+++ b/mcps/Adios/pyproject.toml
@@ -27,7 +27,10 @@ dependencies = [
 
 [dependency-groups]
 dev = [
+    "mypy>=1.17.0",
     "pytest>=8.0.0",
+    "pytest-cov>=6.2.1",
+    "ruff>=0.12.5",
 ]
 
 [project.scripts]
