--- a/mcps/Arxiv/pyproject.toml
+++ b/mcps/Arxiv/pyproject.toml
@@ -18,7 +18,11 @@ dependencies = [
 
 [dependency-groups]
 dev = [
-     "pytest-asyncio>=1.0.0"
+     "mypy>=1.17.0",
+     "pytest>=8.4.1",
+     "pytest-asyncio>=1.0.0",
+     "pytest-cov>=6.2.1",
+     "ruff>=0.12.5",
 ]
 
 [project.scripts]
