Compression: Codebase formatting and passing the test coverage

--- a/mcps/Compression/pyproject.toml
+++ b/mcps/Compression/pyproject.toml
@@ -19,7 +19,11 @@ dependencies = [
 
 [dependency-groups]
 dev = [
-     "pytest-asyncio>=1.0.0"
+     "mypy>=1.17.0",
+     "pytest>=8.3.5",
+     "pytest-asyncio>=1.0.0",
+     "pytest-cov>=6.2.1",
+     "ruff>=0.12.5",
 ]
 
 [project.scripts]
