--- a/mcps/Chronolog/pyproject.toml
+++ b/mcps/Chronolog/pyproject.toml
@@ -38,3 +38,8 @@ chronolog-mcp = "chronomcp.server:main"
 [build-system]
 requires = ["setuptools>=64.0", "wheel"]
 build-backend = "setuptools.build_meta"
+
+[dependency-groups]
+dev = [
+    "ruff>=0.12.5",
+]
