--- a/mcps/HDF5/pyproject.toml
+++ b/mcps/HDF5/pyproject.toml
@@ -20,7 +20,8 @@ keywords = ["hdf5", "scientific-data", "hierarchical-data", "data-analysis", "sc
 [tool.uv]
 dev-dependencies = [
     "pytest>=8.4.0",
-    "pytest-asyncio>=0.21.0"
+    "pytest-asyncio>=0.21.0",
+    "ruff>=0.12.5",
 ]
 
 [project.scripts]
