--- a/mcps/Pandas/pyproject.toml
+++ b/mcps/Pandas/pyproject.toml
@@ -33,3 +33,10 @@ pandas-mcp = "server:main"
 [build-system]
 requires = ["setuptools>=64.0", "wheel"]
 build-backend = "setuptools.build_meta"
+
+[dependency-groups]
+dev = [
+    "pytest>=8.4.1",
+    "pytest-cov>=6.2.1",
+    "ruff>=0.12.5",
+]
