--- a/mcps/Parallel_Sort/pyproject.toml
+++ b/mcps/Parallel_Sort/pyproject.toml
@@ -20,7 +20,8 @@ dependencies = [
 
 [dependency-groups]
 dev = [
-    "pytest-asyncio>=0.23.0"
+    "pytest-asyncio>=0.23.0",
+    "ruff>=0.12.5",
 ]
 
 [project.scripts]
