--- a/mcps/Slurm/pyproject.toml
+++ b/mcps/Slurm/pyproject.toml
@@ -24,7 +24,7 @@ dev = [
     "black>=23.0.0",
     "isort>=5.12.0",
     "mypy>=1.7.0",
-    "ruff>=0.1.0"
+    "ruff>=0.1.0",
 ]
 
 [project.scripts]
