lmod: Codebase formatting and passing the test coverage

--- a/mcps/lmod/pyproject.toml
+++ b/mcps/lmod/pyproject.toml
@@ -19,7 +19,8 @@ keywords = ["lmod", "environment-modules", "module-management", "hpc", "scientif
 [tool.uv]
 dev-dependencies = [
     "pytest>=8.4.0",
-    "pytest-asyncio>=0.21.0"
+    "pytest-asyncio>=0.21.0",
+    "ruff>=0.12.5",
 ]
 
 [project.scripts]
