--- a/mcps/Parallel_Sort/pyproject.toml
+++ b/mcps/Parallel_Sort/pyproject.toml
@@ -22,6 +22,7 @@ dependencies = [
 dev = [
     "pytest-asyncio>=0.23.0",
     "ruff>=0.12.5",
+    "types-aiofiles>=23.0.0",
 ]
 
 [project.scripts]
