Updated the security job of the workflow to run the code audit on the MCPs

--- a/.github/workflows/quality_control.yml
+++ b/.github/workflows/quality_control.yml
@@ -29,7 +29,7 @@ jobs:
           mcps_list=$(echo "$mcps_list" | grep -v -E "^($blacklisted_mcps)$")
         fi
         
-        mcps=$(echo "$mcps_list" | jq -R -s -c 'split("\n")[:-1]')
+        mcps=$(echo "$mcps_list" | jq -R -s -c 'split("\n")[:-1]')`
         echo "mcps=$mcps" >> $GITHUB_OUTPUT
         echo "Found MCPs: $mcps"
 
@@ -61,7 +61,7 @@ jobs:
         if [ -f pyproject.toml ]; then
           uv sync --all-extras --dev 
         fi
-        uv add --dev ruff || echo "Failed to add ruff, continuing..."
+        uv add --dev ruff"
     
     - name: Run Ruff linter on ${{ matrix.mcp }}
       run: |
@@ -101,7 +101,7 @@ jobs:
         if [ -f pyproject.toml ]; then
           uv sync --all-extras --dev
         fi
-        uv add --dev mypy || echo "Failed to add mypy, continuing..."
+        uv add --dev mypy "
     
     - name: Run MyPy on ${{ matrix.mcp }}
       run: |
@@ -169,7 +169,7 @@ jobs:
         path: mcps/${{ matrix.mcp }}/htmlcov/
 
   security:
-    name: Security - ${{ matrix.mcp }}
+    name: Security Audit - ${{ matrix.mcp }}
     runs-on: ubuntu-latest
     needs: discover-mcps
     strategy:
@@ -194,41 +194,18 @@ jobs:
       run: |
         cd mcps/${{ matrix.mcp }}
         if [ -f pyproject.toml ]; then
-          uv sync --all-extras --dev 
+          uv sync --all-extras --dev
         fi
+        uv add --dev pip-audit"
     
-    - name: Run dependency security audit
+    - name: Run security audit for ${{ matrix.mcp }}
       run: |
         cd mcps/${{ matrix.mcp }}
-        if [ -f uv.lock ]; then
-          uv audit 
+        if [ -f pyproject.toml ]; then
+          uv run pip-audit
         else
-          echo "No uv.lock file found for ${{ matrix.mcp }}"
+          echo "No pyproject.toml found for ${{ matrix.mcp }}, skipping security audit"
         fi
-    
-    - name: Verify lockfile integrity
-      run: |
-        cd mcps/${{ matrix.mcp }}
-        if [ -f uv.lock ]; then
-          uv sync --locked 
-        fi
-    
-    - name: Run Bandit security scan
-      run: |
-        cd mcps/${{ matrix.mcp }}
-        if [ -d src ]; then
-          uv run --with bandit bandit -r src/ -f json -o bandit-report.json 
-        else
-          echo "No src directory found for ${{ matrix.mcp }}"
-        fi
-    
-    - name: Upload security reports
-      uses: actions/upload-artifact@v4
-      if: always()
-      with:
-        name: security-reports-${{ matrix.mcp }}
-        path: |
-          mcps/${{ matrix.mcp }}/bandit-report.json
 
   python-3-10:
     name: Python 3.10 - ${{ matrix.mcp }}
