--- a/mcps/Adios/pyproject.toml
+++ b/mcps/Adios/pyproject.toml
@@ -28,6 +28,7 @@ dependencies = [
 [dependency-groups]
 dev = [
     "mypy>=1.17.0",
+    "pip-audit>=2.9.0",
     "pytest>=8.0.0",
     "pytest-cov>=6.2.1",
     "ruff>=0.12.5",
