Add pip-audit>=2.9.0 to dev dependencies of all MCPs

--- a/mcps/Adios/pyproject.toml
+++ b/mcps/Adios/pyproject.toml
@@ -23,11 +23,13 @@ dependencies = [
     "fastmcp",
     "numpy",
     "adios2"
+    
 ]
 
 [dependency-groups]
 dev = [
     "pytest>=8.0.0",
+    "pip-audit>=2.9.0",
 ]
 
 [project.scripts]
