--- a/mcps/Compression/pyproject.toml
+++ b/mcps/Compression/pyproject.toml
@@ -19,7 +19,8 @@ dependencies = [
 
 [dependency-groups]
 dev = [
-     "pytest-asyncio>=1.0.0"
+     "pytest-asyncio>=1.0.0",
+     "pip-audit>=2.9.0",
 ]
 
 [project.scripts]
