--- a/mcps/Darshan/pyproject.toml
+++ b/mcps/Darshan/pyproject.toml
@@ -35,5 +35,6 @@ where = ["src"]
 [tool.uv]
 dev-dependencies = [
     "pytest>=8.4.0",
-    "pytest-asyncio>=0.21.0"
+    "pytest-asyncio>=0.21.0",
+    "pip-audit>=2.9.0"
 ]
