--- a/mcps/Node_Hardware/pyproject.toml
+++ b/mcps/Node_Hardware/pyproject.toml
@@ -20,7 +20,8 @@ keywords = ["hardware-monitoring", "system-analysis", "performance-metrics", "no
 [tool.uv]
 dev-dependencies = [
     "pytest>=8.4.0",
-    "pytest-asyncio>=0.21.0"
+    "pytest-asyncio>=0.21.0",
+    "pip-audit>=2.9.0"
 ]
 
 [project.scripts]
